@@ -56,6 +56,9 @@
                     <configuration>
                         <compilerArgs>
                             <arg>-Xlint:all</arg>
+                            <arg>--enable-preview</arg>
+                            <arg>--add-modules</arg>
+                            <arg>jdk.incubator.vector</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
